05_kubernetes/03_Session3_Application_Deployment/017-ingress-the-front-door/06-ingress-bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillspace
  namespace: lab017
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              # จงใจผิด: ไม่มี Service ชื่อนี้
              service:
                name: web-svc
                port:
                  number: 3000
